<resources>
    <string name="app_name">Red E4 Application</string>
    <string name="accel">Accelerometers</string>
    <string name="accel_x">x:</string>
    <string name="accel_y">y:</string>
    <string name="accel_z">z:</string>
    <string name="bvp_label">BVP</string>
    <string name="eda_label">EDA</string>
    <string name="ibi_label">IBI</string>
    <string name="empty_text">-</string>
    <string name="calibrating_text">calibrating</string>
    <string name="temp_label">Temperature</string>
    <string name="battery_label">Battery</string>
    <string name="heart_label">Heart Rate</string>
    <string name="stop_streaming">Disconnect</string>
    <string name="wrist_label">Wrist Status</string>
    <string name="on_wrist">On Wrist</string>
    <string name="not_on_wrist">Not On Wrist</string>
</resources>
