<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/holo_orange_light">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="36dp"/>

    <TextView
        android:id="@+id/session_label"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/calibrating_text"/>

    <LinearLayout
        android:id="@+id/data_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accel_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accel" />

        <LinearLayout
            android:id="@+id/accel_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_x" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:id="@+id/accel_x"
                android:text="@string/empty_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_y" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:id="@+id/accel_y"
                android:text="@string/empty_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_z" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:id="@+id/accel_z"
                android:text="@string/empty_text"/>

        </LinearLayout>

        <TextView
            android:id="@+id/bvp_label"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bvp_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bvp"
            android:text="@string/calibrating_text"/>

        <TextView
            android:id="@+id/eda_label"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eda_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eda"
            android:text="@string/calibrating_text"/>

        <TextView
            android:id="@+id/ibi_label"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ibi_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibi"
            android:text="@string/calibrating_text"/>

        <TextView
            android:id="@+id/heart_label"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heart"
            android:text="@string/calibrating_text"/>

        <TextView
            android:id="@+id/temp_label"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temperature"
            android:text="@string/calibrating_text"/>

        <TextView
            android:id="@+id/wrist_label"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrist_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wrist_status_label"
            android:text="@string/calibrating_text"/>

        <Button
            android:id="@+id/disconnectButton"
            android:layout_marginTop="10dp"
            android:text="@string/stop_streaming"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

    </LinearLayout>
</LinearLayout>